<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group
        android:id="@+id/group_nav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_MainMenu"
            android:title="@string/test_MainMenu"/>
        <item
            android:id="@+id/nav_drawer_SendDocument"
            android:title="@string/test_send_document" />
        <item
            android:id="@+id/nav_drawer_PrinterLanding"
            android:title="@string/nav_drawer_Owner" />
        <item
            android:id="@+id/nav_drawer_Settings"
            android:title="@string/nav_drawer_Settings" />
        <item
            android:id="@+id/nav_drawer_Logout"
            android:title="@string/nav_drawer_Logout"
            android:checkable="false" />
    </group>
 </menu>